# model-inspect

./: .gitignore  README.md  setup.cfg  setup.py
model_inspect/: cli.py
