[metadata]
name = model-inspect
version = 0.5.0
author = simpxx
author_email = simpxx@gmail.com
description = Command-line tool for analyzing layer-wise parameters of Hugging Face models including shapes, data types, and memory footprints
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/simpx/model-inspect
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires =
    requests>=2.25
    prettytable>=3.0

[options.entry_points]
console_scripts =
    model-inspect = model_inspect.cli:main